docs: updated README