@@ -1,5 +1,18 @@
-## CMSC 137 PROJECT
+## KeyTypeGrandPrix - A Multiplayer Typing Game
 
+Authors: Arawela Lou Delmo, Clark Vince Diala, Christian Jewel Pascua
 
-### JavaFX project setup on Eclipse
-* https://www.youtube.com/watch?v=nz8P528uGjk
+### JavaFX Project Setup in Eclipse
+**Important Note**: JavaFX is not bundled with JDK after Java 8. Follow these steps to set up your JavaFX project in Eclipse:  
+
+In the "VM arguments" section, add the following line (indicated in the video):
+``` --module-path "path_to_your_javafx_sdk/lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml ```
+
+Replace "path_to_your_javafx_sdk" with the actual path to your JavaFX SDK installation directory.
+
+### Setup Guide
+For a visual guide on setting up a JavaFX project in Eclipse, refer to this video tutorial: [JavaFX Project Setup in Eclipse Tutorial](https://www.youtube.com/watch?v=nz8P528uGjk)
+
+### Java Version Used
+Java 19.0.2 was used for this project.
+
